# e2e-banking-app

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  docker-compose.yaml  index.html  manifest.webmanifest  paymentoption.tsx  registerSW.js  sw.js
.github/workflows/: build-and-deploy-pwa.yaml  build-deploy-and-docker-build.yml  build-frontend.yml  build-service.yml  (+4 more)
assets/: index-43_zrJxR.css  index-8nOOQ0bb.js  index-B7VSi3L6.css  index-BZe2ewQc.js  index-CAUZtboa.css  index-Cu5kcCi4.css  index-DXvDdvZj.css  index-DaqMlAOT.css  index-DmfqOoHq.css  index-DuW-Bhmv.css  index-Z4c3JHQg.js  index-oKynzsPM.js
docs/: .template.md  App_compatibility.md  Build-and-push-docker-images.md  PWA_requirements_guide.md  Rocket-server.md  Setup-build-and-push-docker-images.md  Translational-service-backend.md  ValidatePInDisplayBalance.md  ValidatePinDisplayBalance.md  backend_guide.md  css-tailwind.md  lombok_guide.md  power-payment-app.md  pps-ppt.openapi.yaml  sass_usage.md  useStorage.md  validatePIN-and-DisplayBalance.md
e2e-banking-app-tailwind/: package.json
power-pay-backend/: .dockerignore  Dockerfile  pom.xml
power-pay-frontend/: .gitignore  Dockerfile  gulpfile.js  index.html  package-lock.json  package.json  service-worker.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
power-pay-translator/: .gitignore  Cargo.toml  Dockerfile  README.md
power-pay-translator/src/: chat_2024_03_12_16_10_32.md  endpiont_test.rs  main  main.rs  routes.rs  server.rs
power-pay-translator/src/tests/: integration_test.rs  routes_test..rs  unit_test.rs
(+109 files in other folders)
