[package]
name = "power-pay-translator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

tokio-openssl = "0.6.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3"
log = "0.4.0"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
server-ppt = { path = "crates/server-ppt" }
async-trait = "0.1.79"
openssl = "0.10.64"